# ndx

./: Cargo.toml  README.md  todo.txt
.assets/: compiled.info
.cargo/: config.toml
assets/animations/: Mutant Breathing Idle.fbx
assets/meshes/cube/: compile_settings.json  compile_settings.txt  cube.glb
assets/meshes/mutant/: compile_settings.json
compiler/: Cargo.toml  README.md  compile.bat  compile.py
compiler/src/: lib.rs  mesh.rs  vertices.rs
core/: Cargo.toml  README.md
core/examples/: basic.rs
core/src/: adapter.rs  animation.rs  assets.rs  bgls.rs  camera.rs  engine.rs  game.rs  instance.rs  lib.rs  material.rs  mesh.rs  model.rs  scene.rs  settings.rs  skin.rs  surface.rs  vertices.rs  window.rs
core/src/scripts/: flying_camera.rs  mod.rs
core/src/shaders/: mod.rs
core/src/shaders/anim_diftex/: mod.rs  shader.wgsl
core/src/shaders/basic/: mod.rs  shader.wgsl
core/src/shaders/basic_diftex/: mod.rs  shader.wgsl
font_raster/: font_raster.html
gui/: Cargo.toml
gui/src/: font.rs  lib.rs  style.rs
gui/src/rect/: mod.rs  shader.wgsl
gui/src/text/: mod.rs  shader.wgsl
math/: Cargo.toml
math/src/: lib.rs  mat4.rs  vec3.rs
texture/: Cargo.toml
texture/src/: depth.rs  diffuse.rs  lib.rs
utils/: Cargo.toml
utils/src/: lib.rs
vetruvino/: Cargo.toml
vetruvino/src/: main.rs
